--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
           content="Web site created using create-react-app" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600&family=Open+Sans:wght@500&family=PT+Sans+Narrow&display=swap" rel="stylesheet">   
     <style>
         * {
             font-family: 'Barlow', sans-serif;
